--- a/views/home.html
+++ b/views/home.html
@@ -74,7 +74,7 @@
               <p class="precios">$6.770</p>
               <p class="descuentos">40% OFF</p>
             </div>
-            <p>Cafetera Moulinex</p>
+            <p class="description">Cafetera Moulinex</p>
           </div>
         </article>
         <article>
@@ -85,7 +85,7 @@
               <p class="precios">$230.000</p>
               <p class="descuentos">20% off</p>
             </div>
-            <p>MacBook Pro 2019</p>
+            <p class="description">MacBook Pro 2019</p>
           </div>
         </article>
 
@@ -97,7 +97,7 @@
               <p class="precios">$70.500</p>
               <p class="descuentos">10% off</p>
             </div>
-            <p>Samsung Galaxy S10</p>
+            <p class="description">Samsung Galaxy S10</p>
           </div>
         </article>
         <article>
@@ -108,7 +108,7 @@
               <p class="precios">$23.200</p>
               <p class="descuentos">5% off</p>
             </div>
-            <p>SmartTv Samsung 43"</p>
+            <p class="description">SmartTv Samsung 43"</p>
           </div>
         </article>
       </section>
@@ -122,7 +122,7 @@
               <p class="precios">$6.770</p>
               <p class="descuentos">40% OFF</p>
             </div>
-            <p>Cafetera Moulinex</p>
+            <p class="description">Cafetera Moulinex</p>
           </div>
         </article>
 
@@ -134,7 +134,7 @@
               <p class="precios">$230.000</p>
               <p class="descuentos">20% off</p>
             </div>
-            <p>MacBook Pro 2019</p>
+            <p class="description">MacBook Pro 2019</p>
           </div>
         </article>
 
@@ -146,7 +146,7 @@
               <p class="precios">$70.500</p>
               <p class="descuentos">10% off</p>
             </div>
-            <p>Samsung Galaxy S10</p>
+            <p class="description">Samsung Galaxy S10</p>
           </div>
         </article>
         <article>
@@ -157,7 +157,7 @@
               <p class="precios">$23.200</p>
               <p class="descuentos">5% off</p>
             </div>
-            <p>SmartTv Samsung 43"</p>
+            <p class="description">SmartTv Samsung 43"</p>
           </div>
         </article>
       </section>
