--- a/views/register.html
+++ b/views/register.html
@@ -19,23 +19,27 @@
   </head>
   <body>
     <header>
-      <img src="./img/logo-mercado-liebre.svg" alt="logo" class="logo-ml" />
+      <div class="box1">
+        <div class="logo-ml">
+          <img src="./img/logo-mercado-liebre.svg" alt="logo" />
+        </div>
 
-      <div class="barra-busqueda">
-        <input
-          type="search"
-          name="search"
-          placeholder="Busca productos y marcas"
-        />
-        <br />
-        <i id="lupa" class="fa-solid fa-magnifying-glass"></i>
+        <div class="barra-busqueda">
+          <input
+            class="input-busqueda"
+            type="search"
+            name="search"
+            placeholder="Busca productos y marcas"
+          />
+          <i id="lupa" class="fa-solid fa-magnifying-glass"></i>
+        </div>
       </div>
 
       <p class="cuotas">
         <i class="fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin
         tarjeta de crédito
       </p>
-      <div id="links">
+      <div class="links">
         <ul class="nav1">
           <li><a>Ofertas</a></li>
           <li><a>Tiendas Oficiales</a></li>
