--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,6 +18,7 @@ body {
      font-family: 'Roboto', sans-serif;
      font-size: 12px;
      background-color: var(--gris-claro);
+     height: 100vh;
      
 }
 p {
@@ -122,10 +123,13 @@ main {
 
 article {
      margin: 15px;
-
      background-color: #fff;
      border: 1px solid var(--gris-claro);
+     transition: all 0.5s;
+}
 
+article:hover{
+     box-shadow: 0px 0px 10px rgb(100, 100, 100);
 }
 article img{
 width: 90%;
@@ -185,14 +189,28 @@ section {
      top: -15px;
 }
  
+.description{
+     display: none;
+     transition: all 0.5s;
+}
 
+article:hover p{
+     display: block;
+}
 
+.envios{
+     transition: all 0.5s;
+}
 
+.envios:hover{
+     transform: rotate(-90deg);
+}
 
 /*  *****FOOTER***** */
 
 footer {
      text-align: center;
+
 
 
 }
@@ -205,6 +223,71 @@ footer {
      font-size: 2em;
      color: var(--azul);
      margin-bottom: 10px;
+}
+
+/* ------------- LOGIN ------------- */
+
+.form-login{
+     width: 300px;
+     height: 400px;
+     border: 1px solid black;
+     border-radius: 10px;
+     margin: 150px auto 150px auto;
+     background-color: #fff;
+     box-shadow: 0px 0px 10px rgb(100, 100, 100);
+
+}
+
+.form-login h1{
+     text-align: center;
+     padding: 10px 0 20px 0;
+     border-bottom: 1px solid black;
+}
+
+.form-login form{
+     padding: 20px;
+}
+
+form .user-login{
+     display: flex;
+     flex-direction: column;
+     padding: 5px;
+     text-align: center;
+}
+
+form .password-login {
+     display: flex;
+     flex-direction: column;
+     padding: 5px;
+     text-align: center;
+}
+
+form .pass{
+     text-align: center ;
+     padding: 5px;
+}
+
+ form .btn-enviar {
+     padding-top: 20px;
+     text-align: center;
+}
+
+form .new-user{
+     padding-top: 20px;
+     text-align: center;
+     transition: all 0.5s;
+} 
+
+form .btn-enviar button{
+     padding: 5px;
+}
+form .btn-enviar button:hover{
+     background-color: var(--celeste);
+     color: #FFF;
+}
+
+form .new-user p{
+     padding: 5px;
 }
 
 /*  *****MEDIA QUERIES*****  */
