--- a/views/login.html
+++ b/views/login.html
@@ -20,23 +20,27 @@
 
   <body>
     <header>
-      <img src="./img/logo-mercado-liebre.svg" alt="logo" class="logo-ml" />
+      <div class="box1">
+        <div class="logo-ml">
+          <img src="./img/logo-mercado-liebre.svg" alt="logo" />
+        </div>
 
-      <div class="barra-busqueda">
-        <input
-          type="search"
-          name="search"
-          placeholder="Busca productos y marcas"
-        />
-        <br />
-        <i id="lupa" class="fa-solid fa-magnifying-glass"></i>
+        <div class="barra-busqueda">
+          <input
+            class="input-busqueda"
+            type="search"
+            name="search"
+            placeholder="Busca productos y marcas"
+          />
+          <i id="lupa" class="fa-solid fa-magnifying-glass"></i>
+        </div>
       </div>
 
       <p class="cuotas">
         <i class="fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin
         tarjeta de crédito
       </p>
-      <div id="links">
+      <div class="links">
         <ul class="nav1">
           <li><a>Ofertas</a></li>
           <li><a>Tiendas Oficiales</a></li>
@@ -60,21 +64,34 @@
       </div>
     </header>
     <main>
-      <form action="/" method="get">
-        <label for="usuario">Nombre de usuario</label>
-        <input type="text" name="usuario" id="usuario" minlength="4" />
+      <div class="form-login">
+        <h1>Login</h1>
+        <form action="/" method="get">
+          <div class="user-login">
+            <label for="usuario">Nombre de usuario</label>
+            <input
+              type="text"
+              name="usuario"
+              id="usuario"
+              minlength="4"
+              required
+            />
+          </div>
 
-        <label for="password">Contraseña</label>
-        <input type="password" name="password" id="password" />
-        <button type="submit">Enviar</button>
-      </form>
-      <form action="">
-        <div>
-          <label for="username"></label><input type="text" id="username" />
-        </div>
-        <div><label for=""></label><input type="text" /></div>
-        <button></button>
-      </form>
+          <div class="password-login">
+            <label for="password-login">Contraseña</label>
+            <input type="password" name="password" id="password" />
+          </div>
+          <div class="pass"><a href="#">Olvidaste la contraseña?</a></div>
+          <div class="btn-enviar">
+            <button type="submit">Enviar</button>
+          </div>
+          <div class="new-user">
+            <p>No tienes cuenra?</p>
+            <a href="#">CREAR NUEVA</a>
+          </div>
+        </form>
+      </div>
     </main>
     <footer>
       <ul class="ul-footer">
