--- a/public/css/style.css
+++ b/public/css/style.css
@@ -222,7 +222,12 @@ footer {
 .icon {
      font-size: 2em;
      color: var(--azul);
-     margin-bottom: 10px;
+     margin-bottom: 10px;     
+     transition: all 0.5s;
+}
+
+.icon:hover{
+     color: var(--verde);
 }
 
 /* ------------- LOGIN ------------- */
@@ -468,6 +473,10 @@ form .btn-reg button{
      article {
      width: 20%;
       box-shadow: 0px 0px 10px rgb(100, 100, 100);
+}
+
+footer{
+
 }
 }
 
